--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "headlessui": "^0.0.0",
     "heroicons": "^2.1.4",
     "leaflet": "^1.9.4",
+    "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
