--- a/package.json
+++ b/package.json
@@ -20,10 +20,14 @@
     "@radix-ui/react-slot": "^1.2.0",
     "@radix-ui/react-toast": "^1.1.5",
     "@react-icons/all-files": "^4.1.0",
+    "@types/express": "^5.0.1",
+    "@types/next": "^8.0.7",
     "axios": "^1.7.2",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "cors": "^2.8.5",
     "date-fns": "^3.6.0",
+    "express": "^5.1.0",
     "flowbite": "^2.3.0",
     "font-awesome": "^4.7.0",
     "headlessui": "^0.0.0",
@@ -31,22 +35,26 @@
     "leaflet": "^1.9.4",
     "lucide-react": "^0.503.0",
     "motion": "^12.9.2",
+    "next": "^15.3.1",
     "react": "^18.3.1",
     "react-datepicker": "^7.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.5",
+    "react-hot-toast": "^2.5.2",
     "react-icons": "^5.5.0",
     "react-input-mask": "^2.0.4",
     "react-leaflet": "^4.2.1",
     "react-multi-carousel": "^2.8.5",
     "react-router-dom": "^6.23.1",
+    "resend": "^4.4.1",
     "tailwind-merge": "^2.3.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.2.22",
